--- a/bower.json
+++ b/bower.json
@@ -13,12 +13,10 @@
     "fontawesome": "~4.2.0",
     "jquery": "~2.1.1",
     "ng-table": "~0.3.3",
-    "underscore": "1.7.0",
     "jqueryui": "~1.11.1",
     "jQueryValidate": "*",
     "bootstrap3-switch": "~0.1.1",
-    "greensock": "~1.13.2",
-    "ng-ckeditor": "~0.2.1"
+    "greensock": "~1.13.2"
   },
   "devDependencies": {
     "angular": "~1.3.0",
@@ -178,8 +176,8 @@
     }
   },
   "resolutions": {
-    "angular": "~1.3.0",
-    "angular-ui-utils": "bower"
+    "jquery": "~2.1.1",
+    "angular": "~1.3.0"
   },
   "name": "JMedia",
   "version": "0.0.1",
