--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,10 @@
     "angular-bootstrap-switch": "~0.3.0",
     "angular-sanitize": "~1.3.0",
     "satellizer": "0.8.4",
-    "ng-jcrop": "1.1.1"
+    "ng-jcrop": "1.1.1",
+    "angular-breadcrumb": "~0.3.0",
+    "oclazyload": "~0.5.0",
+    "angular-touch": "~1.3.2"
   },
   "devDependencies": {
     "angular": "~1.3.0",
@@ -277,6 +280,11 @@
         "./**/*.min.js",
         "./**/*.min.css",
         "./**/*.map"
+      ]
+    },
+    "oclazyload": {
+      "main": [
+        "./dist/*.min.js"
       ]
     },
     "responsive-tables": {
