--- a/bower.json
+++ b/bower.json
@@ -7,48 +7,45 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrapValidator": "~0.5.0",
+    "angular": "~1.3.6",
+    "angular-bootstrap": "~0.12.0",
+    "angular-mocks": "~1.3.6",
+    "angular-moment": "~0.8.3",
+    "angular-sails": "~1.0.4",
+    "angular-translate": "~2.5.0",
+    "angular-translate-loader-static-files": "~2.5.0",
+    "angular-ui-router": "~0.2.13",
+    "socket.io-client": "~1.2.1",
+    "angular-ui-utils": "~0.1.1",
+    "bootstrapValidator": "~0.5.3",
     "fontawesome": "~4.2.0",
-    "jquery": "~2.1.1",
-    "jqueryui": "~1.11.1",
+    "jqueryui": "~1.11.2",
     "jQueryValidate": "*",
-    "angular-messages": "~1.3.0-rc.3",
-    "angular-xeditable": "*",
-    "angular-gsapify-router": "*",
+    "angular-messages": "~1.3.6",
+    "angular-xeditable": "~0.1.8",
+    "angular-gsapify-router": "~0.0.17",
     "ng-table": "~0.3.3",
     "ngstorage": "~0.3.0",
     "restangular": "~1.4.0",
-    "ng-lodash": "~0.0.2",
+    "ng-lodash": "~0.1.0",
     "ng-bs-daterangepicker": "~0.0.3",
-    "bootstrap-daterangepicker": "~1.3.13",
-    "fullcalendar": "~2.1.1",
-    "dropzone": "~3.10.2",
+    "bootstrap-daterangepicker": "~1.3.17",
+    "fullcalendar": "~2.2.3",
+    "dropzone": "~3.12.0",
     "angular-dropzone": "~0.1.1",
     "responsive-tables": "*",
     "angular-isotope": "~0.1.14",
-    "isotope": "~2.0.1",
-    "ui-router-extras": "latest",
+    "isotope": "~2.1.0",
+    "ui-router-extras": "~0.0.11",
     "ui-select": "*",
-    "angular-bootstrap-switch": "~0.3.0",
-    "angular-sanitize": "~1.3.0",
-    "satellizer": "0.8.4",
-    "ng-jcrop": "1.1.1",
-    "angular-breadcrumb": "~0.3.0",
-    "oclazyload": "~0.5.0",
-    "angular-touch": "~1.3.2"
+    "angular-sanitize": "~1.3.6",
+    "ng-jcrop": "~1.1.2",
+    "angular-breadcrumb": "~0.3.2",
+    "oclazyload": "~0.5.1",
+    "angular-touch": "~1.3.6",
+    "satellizer": "~0.8.7"
   },
-  "devDependencies": {
-    "angular": "~1.3.0",
-    "angular-bootstrap": "~0.11.0",
-    "angular-mocks": "~1.3.0",
-    "angular-moment": "~0.8.1",
-    "angular-sails": "~1.0.4",
-    "angular-translate": "~2.4.0",
-    "angular-translate-loader-static-files": "~2.4.0",
-    "angular-ui-router": "~0.2.11",
-    "socket.io-client": "~1.2.0",
-    "angular-ui-utils": "bower"
-  },
+  "devDependencies": {},
   "overrides": {
     "angular": {
       "main": [
@@ -341,14 +338,12 @@
       ]
     }
   },
-  "resolutions": {
-    "jquery": "~2.1.1",
-    "angular": "~1.3.0",
-    "bootstrap": "~3.2.0",
-    "isotope": "~2.0.1"
-  },
   "name": "JMedia",
   "version": "0.0.1",
   "author": "Karnith / JCMar",
-  "private": true
+  "private": true,
+  "resolutions": {
+    "angular": "~1.3.6",
+    "isotope": "~2.1.0"
+  }
 }
